# mcp-codebase-memory

./: GUIDE.md  LICENSE  README.md
assets/: post.html
starter/: Cargo.toml  mcp-server.rs
