[package]
name = "codebase-memory-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Varritech <christian@varritech.com>"]
description = "MCP server for persistent codebase knowledge graph"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.22"
tree-sitter-rust = "0.22"
tree-sitter-python = "0.22"
tree-sitter-typescript = "0.22"
rayon = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
zstd = "0.13"

[[bin]]
name = "codebase-memory-mcp"
path = "mcp-server.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
